[gd_scene load_steps=3 format=3 uid="uid://15jvjqchx2oj"]

[ext_resource type="Script" path="res://Scripts/paddle.gd" id="1_ab1b1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6sdd"]
size = Vector2(198, 26)

[node name="Paddle" type="CharacterBody2D" groups=["Paddle"]]
motion_mode = 1
script = ExtResource("1_ab1b1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -99.0
offset_top = -13.0
offset_right = 99.0
offset_bottom = 13.0
color = Color(0.231801, 0.648768, 0.841425, 1)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-100, 0)
target_position = Vector2(-5, 0)
collision_mask = 7
hit_from_inside = true
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(100, 0)
target_position = Vector2(5, 0)
collision_mask = 7
hit_from_inside = true
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x6sdd")
debug_color = Color(0.538946, 0.542392, 0.47302, 0.42)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -12.0
offset_right = 26.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_x6sdd")
debug_color = Color(0.538946, 0.542392, 0.47302, 0.42)
